# ld55_old

./: .gitignore  CMakeLists.txt  test.can
assets/: sprite.frag  sprite.vert
scripts/: canner.py
src/: main.cpp
